Travel::Status::DE::VRR 1.02 - Wed Apr 10 2013

    * Patch by Roland Hieber: respect proxy environment variables

Travel::Status::DE::VRR 1.01 - Mon Nov 26 2012

    * Properly parse "tram canceled" information (EVAG, maybe also VRR)

Travel::Status::DE::VRR 1.00 - Sat Dec 03 2011

    * switch to efa.vrr.de XML interface
    * properly decode UTF-8 strings
    * Switch from WWW::Mechanize to LWP::UserAgent
    * Add ->lines and Travel::Status::DE::VRR::Line describing all lines
      serving the given stop

    [Travel::Status::DE::VRR::Result]
    * Add countdown, date, delay, lineref, platform_db, sched_date, sched_time
      and type accessors

    [efa-m]
    * Add -L / --linelist option

Travel::Status::DE::VRR 0.02 - Sat Oct 01 2011

    [efa-m]
    * Add --platform / --line options to filter output
    * Align times properly if departure list contains a daychange
    * Make --date and --time actually work

Travel::Status::DE::VRR 0.01 - Sun Sep 11 2011

    * Initial release