@@ -5,7 +5,7 @@ use 5.010;
 
 no if $] >= 5.018, warnings => "experimental::smartmatch";
 
-our $VERSION = '1.02';
+our $VERSION = '1.03';
 
 binmode( STDOUT, ':encoding(utf-8)' );
 
@@ -178,7 +178,7 @@ B<efa-m> [B<-d> I<date>] [B<-t> I<time>] I<city> [I<type>B<:>]I<name>
 
 =head1 VERSION
 
-version 1.02
+version 1.03
 
 =head1 DESCRIPTION
 
