@@ -1,3 +1,7 @@
+Travel::Status::DE::VRR 1.03 - Wed Apr 10 2013
+
+    * Disable smartmatch warnings on perl >= 5.018
+
 Travel::Status::DE::VRR 1.02 - Wed Apr 10 2013
 
     * Patch by Roland Hieber: respect proxy environment variables
